--- a/manifest.json
+++ b/manifest.json
@@ -24,7 +24,7 @@
     }
    
   ],
-  "start_url": "http://localhost/pwa/breakOut.html",
+  "start_url": "http://localhost/pwa/index.html",
   "display": "standalone",
   "background_color": "#99d6ff",
   "theme_color": "#99d6ff",
